fix: swiper touch zoom on mobile

--- a/src/assets/styles/components/_gallery.scss
+++ b/src/assets/styles/components/_gallery.scss
@@ -40,10 +40,12 @@
   &__swiper {
     position: relative;
     overflow: visible;
+    touch-action: pan-y;
 
     .swiper-wrapper {
       display: flex;
       align-items: center;
+      touch-action: pan-y;
     }
 
     .swiper-slide {
